--- a/src/options/template.html
+++ b/src/options/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Finnie NFT Gallery</title>
+    <title>Finnie</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&display=swap"
       rel="stylesheet"
